--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -77,6 +77,10 @@ h4 {
     font-weight: bold;
 }
 
+.margin-bottom {
+    margin-bottom: 1rem;
+}
+
 .stars-outer {
     display: inline-block;
     position: relative;
