reorganized App & index.js

--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,15 @@ code {
     monospace;
 }
 
+.title {
+  color: #348680;
+  font-size: 80px;
+  margin-bottom: 2rem;
+  text-align: center;
+}
+
+.logo {
+  width:80px;
+  vertical-align: top;
+}
+
