--- a/src/components/RestoBloc.css
+++ b/src/components/RestoBloc.css
@@ -29,3 +29,15 @@
 .bold {
     font-weight: bold;
 }
+
+.streetview-img {
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 5px;
+    width: 100%;
+    max-height: 100%;
+}
+
+.no-padding {
+    padding-left: 0;
+}
