--- a/src/index.css
+++ b/src/index.css
@@ -14,13 +14,13 @@ code {
 
 .title {
   color: #348680;
-  font-size: 80px;
+  font-size: 3.5rem;
   margin-bottom: 1rem;
   text-align: center;
 }
 
 .logo {
-  width:80px;
+  width:3.5rem;
   vertical-align: top;
 }
 
